// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $255.00
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with multiples expenses 1`] = `
<div>
  <p>
    Viewing 
    4
     
    expenses
     totalling 
    $4,500.00
  </p>
</div>
`;
